@@ -49,7 +49,6 @@ import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.Scanner;
 import java.util.Set;
@@ -73,7 +72,7 @@ class Extract {
 
     ManagedChannel channel = createChannel(host);
 
-    Path root = Paths.get("blobs");
+    Path root = Path.of("blobs");
 
     downloadActionContents(root, instanceName, actionDigests.build(), channel);
 
